--- a/styles/index.css
+++ b/styles/index.css
@@ -113,7 +113,7 @@
     margin-top: 130px;
 }
 
-span {
+.span {
     color: #E55473;
 }
 
@@ -212,3 +212,22 @@ span {
 }
 
 /* ends1:40PM */
+/* extra starts 8:27PM */
+.extrat {
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    color: #272727;
+}
+
+.extran {
+    font-size: 36px;
+}
+
+.extra {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1030px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
